[gd_scene load_steps=10 format=2]

[ext_resource path="res://will.jpg" type="Texture" id=1]
[ext_resource path="res://Control.gd" type="Script" id=2]
[ext_resource path="res://Smack.tscn" type="PackedScene" id=3]
[ext_resource path="res://punch.ogg" type="AudioStream" id=4]
[ext_resource path="res://fabri.jpg" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://ARIAL.TTF"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://ARIAL.TTF"

[sub_resource type="DynamicFont" id=4]
size = 21
font_data = SubResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBG" type="Sprite" parent="."]
position = Vector2( 514.5, 301 )
scale = Vector2( 2.18359, 2.81905 )
texture = ExtResource( 1 )

[node name="MenuLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -47.5
margin_bottom = 47.5
custom_fonts/font = SubResource( 2 )
text = "Press space to hit chris rock
you have 30 seconds!"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -92.0
margin_top = -165.0
margin_right = 97.4999
margin_bottom = -109.0
text = "REPLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -92.0
margin_top = -166.0
margin_right = 97.4999
margin_bottom = -110.0
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Smack" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 106, 58 )

[node name="PunchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="TimeCounter" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "TIME LEFT: 30"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitCounter" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -76.0
margin_bottom = -30.0
custom_fonts/font = SubResource( 2 )
text = "SLAPS: 0"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="Fabri" type="Sprite" parent="."]
position = Vector2( 902, 543 )
scale = Vector2( 0.0921296, 0.0921296 )
texture = ExtResource( 5 )

[node name="FabriText" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 785.0
margin_top = 138.0
margin_right = -10.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 4 )
text = "Made by @pedroafabri
in 1 hour :3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ReplayButton" to="." method="_ready"]
[connection signal="pressed" from="PlayButton" to="." method="_startGame"]
[connection signal="timeout" from="GameTimer" to="." method="_time_over"]
